Problem 8 solved using Ruby

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This is a repository of my solucions of projecteuler problems which are found on
 
 http://projecteuler.net/
+
+Problems are solved in haskell or ruby.
